--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <h1 class="logo-name">
       <a class="logo-link" href="#" title="UT Environmental &amp; Energy Economics Workshop 2023" itemprop="name">UT Environmental &amp; Energy Economics Workshop 2023</a>
     </h1>
-    <h2 class="tagline">September 22-23, 2023 15, LBJ School of Public Affairs, University of Texas at Austin, Austin</h2>
+    <h2 class="tagline">September 22-23, 2023, LBJ School of Public Affairs, University of Texas at Austin, Austin</h2>
 
     <div class="call-action-area">
       
