add muller link

--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
               <span class="speakers-name">Nicholas Muller</span><br>
             
 
+            <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3753120" target="_blank" title="Paper"> Paper</a>
+
             </td>
             <td class="schedule-description">We present two findings on how environmental policy uncertainty impacts municipal bond returns. First, returns increase after a new pollution standard is proposed but decrease after this standard is  finalized. Second, after annual announcements of compliance status, returns fall for counties that remain in compliance but increase for newly noncompliant counties. We present suggestive evidence linking these short-run market reactions to long-run changes in pollution and housing prices. Our  findings suggest that increases in either regulatory stringency or uncertainty over future environmental policy increase the cost of municipal debt raised to fund critical infrastructure.</td>
           </tr>
